--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           { heading: '<h3>Heading only...</h3>', image: '', image_text: '', body: '' },
           { heading: '', image: '', image_text: '', body: '<p>Body only...</p>' },
           { heading: '<h3>Heading...</h3>', image: '320x320', image_text: 'Image...', body: '' },
-          { heading: '<h3>Heading...</h3>', image: '', image_text: '', body: 'Body...' },
+          { heading: '<h3>Heading...</h3>', image: '', image_text: '', body: '<p>Body...</p>' },
           { heading: '', image: '320x50', image_text: 'Image...', body: '<p>Body...</p>' },
           { heading: '', image: '320x160', image_text: 'Image only...', body: '' }
         ],
