--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@1.1.2/dist/tailwind.min.css" rel="stylesheet" />
   <style>
-    .ui-panels { background: rgba(0,0,0,0.25); animation: resize 5s 3s infinite alternate; }
+    .ui-panels { background: rgba(0,0,0,0.25); animation: resize 8s 3s infinite alternate ease-in-out; }
     .panel-item p,.panel-item h1,.panel-item h2,.panel-item h3,.panel-item h4,.panel-item h5,.panel-item h6,.panel-item hr { margin-bottom: 1rem; }
     .panel-item hr { border-color: currentColor; opacity: .25; }
     .panel-item ul,.panel-item ol { margin-bottom: 1rem; margin-left: 1rem; list-style: disc outside none; }
