--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   <title>Twitch Profile Panels</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@1.1.2/dist/tailwind.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@1.1.3/dist/tailwind.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.12.1/css/all.min.css" rel="stylesheet" />
+
   <style>
-    .ui-panels { background: rgba(0,0,0,0.25); animation: resize 8s 3s infinite alternate ease-in-out; }
+    .ui-panels { background: rgba(0,0,0,0.25); transition: width 1s; }
     .panel-item p,.panel-item h1,.panel-item h2,.panel-item h3,.panel-item h4,.panel-item h5,.panel-item h6,.panel-item hr { margin-bottom: 1rem; }
     .panel-item hr { border-color: currentColor; opacity: .25; }
     .panel-item ul,.panel-item ol { margin-bottom: 1rem; margin-left: 1rem; list-style: disc outside none; }
@@ -16,15 +18,6 @@
     .panel-item ul ul,.panel-item ul ol,.panel-item ol ol,.panel-item ol ul { margin-bottom: 0; }
     .panel-item a { color: #63B3ED; }
     .panel-item a:hover,.panel-item a:focus { opacity: .5; text-decoration: underline; }
-
-    @keyframes resize {
-      0% {
-        width: 100%;
-      }
-      100% {
-        width: 360px;
-      }
-    }
   </style>
 
 </head>
@@ -60,7 +53,14 @@
   </header>
 
   <main class="mx-auto bg-gray-900">
-    <div class="ui-panels panel-container mx-auto py-16 pb-8 flex flex-wrap justify-center">
+    <ul class="nav-devices p-4 text-center flex flex-wrap items-center justify-center">
+      <li class="mx-3"><a href="#" class="bg-purple-600 text-white border border-transparent py-1 px-2 block rounded" data-width="100%"><i class="fa fa-fw fa-2x fa-arrows-alt-h opacity-50"></i> <b class="block font-normal">full</b></a></li>
+      <li class="mx-3"><a href="#" class="border border-transparent py-1 px-2 block rounded" data-width="1200px"><i class="fa fa-fw fa-2x fa-desktop opacity-50"></i> <b class="block font-normal">xl</b></a></li>
+      <li class="mx-3"><a href="#" class="border border-transparent py-1 px-2 block rounded" data-width="992px"><i class="fa fa-fw fa-2x fa-laptop opacity-50"></i> <b class="block font-normal">lg</b></a></li>
+      <li class="mx-3"><a href="#" class="border border-transparent py-1 px-2 block rounded" data-width="768px"><i class="fa fa-fw fa-2x fa-tablet opacity-50"></i> <b class="block font-normal">md</b></a></li>
+      <li class="mx-3"><a href="#" class="border border-transparent py-1 px-2 block rounded" data-width="480px"><i class="fa fa-fw fa-2x fa-mobile opacity-50"></i> <b class="block font-normal">sm</b></a></li>
+    </ul>
+    <div class="ui-panels panel-container mx-auto py-16 pb-8 w-full flex flex-wrap justify-center">
       <div v-for="(value, index) in panels" class="panel-item mx-4 mb-8 p-4 pb-px w-full max-w-xs bg-gray-800 rounded-sm shadow-xl">
         <div v-if="value.heading != ''" v-html="value.heading" class="panel-heading text-2xl font-bold"></div>
         <div v-if="value.image != ''" class="panel-image opacity-50"><p><a href="#"><img :src="'holder.js/'+ value.image +'?text='+ value.image_text +'&outline=yes&auto=yes&bg=#000&fg=#FFF'" :alt="value.image_text" /></a></p></div>
@@ -73,9 +73,20 @@
     <p class="foot-info font-bold text-center text-grey text-xs flex flex-wrap items-center justify-center">Crafted with <svg xmlns="http://www.w3.org/2000/svg" class="mx-2 text-red-600" width="16" height="16" viewBox="0 0 16 16" role="img" aria-labelledby="foot-love"><title id="foot-love">Love</title><polygon class="fill-current" fill-rule="evenodd" points="8 6 11 3 15 7 8 14 1 7 5 3"/></svg> by <a href="http://craigerskine.com/" class="mx-2 text-gray-500 hover:text-purple-500 focus:text-purple-500">Craig Erskine</a></p>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/jquery/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/holderjs/holder.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script>
+
+    $(function(){
+      $('.nav-devices a').on('click', function(e){
+        e.preventDefault();
+        $('.nav-devices a').removeClass('bg-purple-600 text-white');
+        $(this).addClass('bg-purple-600 text-white');
+        $('.ui-panels').css('width', $(this).data('width'));
+      });
+    });
+
     // data
     var builder = new Vue({
       el: '.ui-panels',
