--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
   </header>
 
   <main class="mx-auto bg-gray-900">
-    <ul class="nav-devices p-4 text-center flex flex-wrap items-center justify-center">
-      <li class="mx-3"><a href="#" class="bg-purple-600 text-white border border-transparent py-1 px-2 hover:text-white focus:text-white block rounded" data-width="100%"><i class="fa fa-fw fa-2x fa-arrows-alt-h opacity-50"></i> <b class="block font-normal">full</b></a></li>
-      <li class="mx-3"><a href="#" class="border border-transparent py-1 px-2 hover:text-white focus:text-white block rounded" data-width="1200px"><i class="fa fa-fw fa-2x fa-desktop opacity-50"></i> <b class="block font-normal">lg</b></a></li>
-      <li class="mx-3"><a href="#" class="border border-transparent py-1 px-2 hover:text-white focus:text-white block rounded" data-width="768px"><i class="fa fa-fw fa-2x fa-tablet-alt opacity-50"></i> <b class="block font-normal">md</b></a></li>
-      <li class="mx-3"><a href="#" class="border border-transparent py-1 px-2 hover:text-white focus:text-white block rounded" data-width="480px"><i class="fa fa-fw fa-2x fa-mobile-alt opacity-50"></i> <b class="block font-normal">sm</b></a></li>
-      <li class="mx-3"><a href="#" class="border border-transparent py-1 px-2 hover:text-white focus:text-white block rounded" data-width="320px"><i class="fa fa-fw fa-lg fa-mobile-alt opacity-50"></i> <b class="block font-normal">xs</b></a></li>
+    <ul class="nav-devices p-4 text-center flex flex-wrap justify-center">
+      <li class="mx-3 flex"><a href="#" class="bg-purple-600 text-white border border-transparent py-1 px-2 hover:text-white focus:text-white block flex flex-col justify-end items-center rounded" data-width="100%"><i class="fa fa-fw fa-2x fa-arrows-alt-h opacity-50"></i> <b class="block font-normal">full</b></a></li>
+      <li class="mx-3 flex"><a href="#" class="border border-transparent py-1 px-2 hover:text-white focus:text-white block flex flex-col justify-end items-center rounded" data-width="1200px"><i class="fa fa-fw fa-2x fa-desktop opacity-50"></i> <b class="block font-normal">lg</b></a></li>
+      <li class="mx-3 flex"><a href="#" class="border border-transparent py-1 px-2 hover:text-white focus:text-white block flex flex-col justify-end items-center rounded" data-width="768px"><i class="fa fa-fw fa-2x fa-laptop opacity-50"></i> <b class="block font-normal">md</b></a></li>
+      <li class="mx-3 flex"><a href="#" class="border border-transparent py-1 px-2 hover:text-white focus:text-white block flex flex-col justify-end items-center rounded" data-width="480px"><i class="fa fa-fw fa-2x fa-mobile-alt opacity-50"></i> <b class="block font-normal">sm</b></a></li>
+      <li class="mx-3 flex"><a href="#" class="border border-transparent py-1 px-2 hover:text-white focus:text-white block flex flex-col justify-end items-center rounded" data-width="320px"><i class="fa fa-fw fa-lg fa-mobile-alt opacity-50"></i> <b class="block font-normal">xs</b></a></li>
     </ul>
     <div class="ui-panels panel-container mx-auto pb-16 pb-8 w-full flex flex-wrap justify-center">
       <div class="ui-panels-width mt-2 mb-16 text-gray-700 flex w-full items-center">
