--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.12.1/css/all.min.css" rel="stylesheet" />
 
   <style>
+    .bg-black { background-color: #0D1016; }
     abbr[title] { border-bottom: 1px dotted currentColor; text-decoration: none; }
     .ui-panels { background: rgba(0,0,0,0.25); transition: width 1s; }
     .panel-item p,.panel-item h1,.panel-item h2,.panel-item h3,.panel-item h4,.panel-item h5,.panel-item h6,.panel-item hr { margin-bottom: 1rem; }
@@ -26,8 +27,8 @@
 
   <header class="intro py-6 px-4 text-base">
     <div class="mx-auto max-w-5xl relative">
-      <h1 class="mb-4 text-4xl text-purple-700 uppercase flex items-center">
-        <i class="fab fa-twitch" role="presentation" aria-label="Twitch"></i>
+      <h1 class="mb-4 text-2xl md:text-4xl text-purple-700 uppercase flex flex-wrap items-center">
+        <i class="fab fa-twitch text-purple-500" role="presentation" aria-label="Twitch"></i>
         <b class="mx-3 text-purple-500">Twitch</b> Profile Panels
       </h1>
       <p class="mb-4">Dear, Twitch you are free to use this... please use this... or hire me to make your profile pages better!</p>
