--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <i class="fab fa-twitch text-purple-500" role="presentation" aria-label="Twitch"></i>
         <b class="mx-3 text-purple-500">Twitch</b> Profile Panels
       </h1>
-      <p class="mb-4">Dear, Twitch you are free to use this... please use this... or hire me to make your profile pages better!</p>
+      <p class="mb-4">Dear, Twitch: you are free to use this... please use this... or hire me to make your profile pages better!</p>
       <ul class="mb-4 ml-4 list-disc">
         <li>Pure <abbr title="Cascading Style Sheet">CSS</abbr>, not dependent on <abbr title="JavaScript">JS</abbr></li>
         <li>Responsive from/to ANY device width</li>
